--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.container {
-    width: 100%;
-    margin: 0px;
-
-}
-
 .header {
     width: 100%;
     height: 66px;
@@ -58,11 +52,9 @@
 
 
 .content {
-    width: 88%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
-    height: 100vh;
 
 }
 
@@ -87,19 +79,30 @@
 
 }
 
-
-.videoPart iframe {
+.playlistwrpper iframe {
     width: 100% !important;
-    height: 70% !important;
+    height: 77%;
     border: none;
 }
 
+
+.videoPart iframe {
+    width: 100% !important;
+    border: none;
+}
+
+.videoTitle {
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+}
+
 .playlist {
-    max-width: 48%;
+    max-width: 60%;
 }
 
 .playlistTiltle {
-    max-width: 46%;
+    max-width: 39%;
     color: #fff;
     margin-top: 20px;
     padding: 5px;
@@ -154,4 +157,9 @@
         margin-top: 20px;
         padding: 5px;
     }
+}
+
+.subscribBtn {
+    border-radius: 20px;
+    margin-top: -15px;
 }
